--- a/pom.xml
+++ b/pom.xml
@@ -308,8 +308,13 @@
 			<artifactId>fastdfs-client-java</artifactId>
 			<version>1.27</version>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.12</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
